force-app/main/default/objects/AI_Interaction_Detail__c/AI_Interaction_Detail__c.object-meta.xml
<CustomObject>
    <description>Object captures interaction with AI.
Data provided, related case, response received, if any errors.</description>
    <label>AI Interaction Detail</label>
    <nameField>
        <displayFormat>AID-{00000000}</displayFormat>
        <label>AI Interaction Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AI Interaction Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>