force-app/main/default/objects/AI_Interaction_Detail__c/fields/Advanced_Support_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Advanced_Support_Feedback__c</fullName>
    <description>This field is used to store feedback from Advanced Support Feedback</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Advanced Support Feedback</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>