force-app/main/default/objects/AI_Interaction_Detail__c/fields/Agent_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Agent_Feedback__c</fullName>
    <description>It will used to store agent feedback for the interaction with the captain</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Agent Feedback</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>