force-app/main/default/objects/AI_Interaction_Detail__c/fields/AI_Response__c.field-meta.xml
<CustomField>
    <fullName>AI_Response__c</fullName>
    <description>Captures response received by AI.</description>
    <label>AI Response</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>