force-app/main/default/objects/AI_Interaction_Detail__c/fields/Chat_Transcript__c.field-meta.xml
<CustomField>
    <fullName>Chat_Transcript__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field will be used to link AI Interaction details with chat transcript to display chat history.</description>
    <label>Chat Transcript</label>
    <referenceTo>LiveChatTranscript</referenceTo>
    <relationshipLabel>AI Interaction Details</relationshipLabel>
    <relationshipName>AI_Interaction_Details</relationshipName>
    <type>Lookup</type>
</CustomField>