force-app/main/default/objects/AI_Interaction_Detail__c/fields/EmailBody__c.field-meta.xml
<CustomField>
    <fullName>EmailBody__c</fullName>
    <description>Captures Email Body - actual text initially send to AI.</description>
    <label>EmailBody</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>