force-app/main/default/objects/AI_Interaction_Detail__c/fields/Interaction_Id__c.field-meta.xml
<CustomField>
    <fullName>Interaction_Id__c</fullName>
    <description>Captures unique interaction Id</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Interaction Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>