force-app/main/default/objects/AI_Interaction_Detail__c/fields/Interaction_Rating__c.field-meta.xml
<CustomField>
    <fullName>Interaction_Rating__c</fullName>
    <description>It will used to store agent rating for the interaction with the captain</description>
    <label>Interaction Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>10</fullName>
                <isActive>false</isActive>
                <label>10</label>
            </value>
            <value>
                <fullName>6</fullName>
                <isActive>false</isActive>
                <label>6</label>
            </value>
            <value>
                <fullName>7</fullName>
                <isActive>false</isActive>
                <label>7</label>
            </value>
            <value>
                <fullName>8</fullName>
                <isActive>false</isActive>
                <label>8</label>
            </value>
            <value>
                <fullName>9</fullName>
                <isActive>false</isActive>
                <label>9</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>