force-app/main/default/objects/AI_Interaction_Detail__c/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <description>To Store AI Chat Rating</description>
    <label>Rating</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>