force-app/main/default/objects/AI_Interaction_Detail__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Chat Type For Different Chat Component</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CX Co-Pilot</fullName>
            </value>
            <value>
                <fullName>Benefits Co-Pilot</fullName>
            </value>
            <value>
                <fullName>Case Completion</fullName>
            </value>
            <value>
                <fullName>Dingo AI CX Co-Pilot</fullName>
            </value>
            <value>
                <fullName>Co-Pilot Load</fullName>
            </value>
            <value>
                <fullName>Agent Feedback</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>