force-app/main/default/objects/AI_Interaction_Detail__c/fields/User_Question__c.field-meta.xml
<CustomField>
    <fullName>User_Question__c</fullName>
    <description>Captures user typed question.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>User Question</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>